# rf-surveillance-node

./: .coveragerc  .editorconfig  .gitignore  .prospector.yml  .pylintrc  .readthedocs.yaml  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.MD  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  README.rst  SECURITY.md  TECHNICALDEBT.rst  TODO.rst  compose.yaml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setting.json  tox.ini
.github/: CODEOWNERS  labeler.yml
.github/workflows/: ci_cd.yaml  docker.yml  gh-release.yml  labeler.yaml  policy_docs.yml  policy_lint.yml  pypi_env.yml  python_imports.yml  release_prod.yaml  release_test.yaml  stale.yml
database/: detail.db  detail.db-journal  raw.db
database/schematic/: detail.db.sql  raw.db.sql
docs/: ISSUE  requirements.txt
docs/html/doctrees/: environment.pickle  index.doctree
docs/html/doctrees/contents/: development.doctree  dmcview.doctree  modules.doctree  usage.doctree
docs/html/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/html/_modules/: index.html
docs/html/html/_modules/dmcview/: compass.html
docs/html/html/_sources/contents/: development.rst.txt
docs/html/html/contents/: development.html  dmcview.html  modules.html  usage.html
docs/source/: conf.py  index.rst  requirements.txt
docs/source/api/: rfnode.rst
docs/source/api/rfnode/: broker.rst  common.rst  device_manager.rst  example_google.rst  main.rst  model.rst  scanner.rst  sender.rst  version.rst
docs/source/api/rfnode/common/: log_manager.rst  setting.rst  util.rst
docs/source/api/rfnode/model/: model.rst
docs/source/api/rfnode/sender/: sender.rst
docs/source/contents/: rfnode.rst  usage.rst
lab/QT/: lab1.py
lab/chunck/: lab1.py
lab/db-path/: lab1.py
lab/queue/: lab1.py
lab/rf/: main2.py  rf_sender.py
lab/rf/css/: receive.py  send.py
lab/rf/css/tcp_send_recieve/: README.txt  lab1.py  lab2.py  receive.py  send.py  tcp.py
lab/rf/css/tcp_send_recieve/struct/: lab1.py  lab2.py
lab/rf/fhss/: README.txt  lab1.py  receive.py  send.py
lab/rf/fhss/mavlink/fragments/rf/: receiver.py  sender.py
lab/rf/fhss/mavlink/fragments/udp/: receiver.py  sender.py
lab/rf/fhss/mavlink/hearbeat/rf/: sender.py
lab/rf/fhss/mavlink/hearbeat/udp/: receiver.py
lab/serialize/: lab1.py  lab2.py  lab3.py  lab4.py
lab/server_client/: client.py
lab/string-output-colored/: lab1.py  lab2.py
media/screen/: README.txt
scripts/: parse_version.py  visualize-dockerfile.py  visualize-ga-workflow.py
src/: setting.json
src/rf-node/: __init__.py  __main__.py  broker.py  cli.py  run.py  scanner.py
src/rf-node/common/: log_manager.py  setting.py  util.py
src/rf-surveillance/: calculator.py  constants.py  scanner.py
src/rf-surveillance/lab/: lab3.py
src/rf-surveillance/lab/thread/: lab1.py
src/rf-surveillance/node/: executor.py  main.py  scan.py  transmitter.py
src/rf-surveillance_node/: cli.py  device_manager.py  scanner.py
src/rf-surveillance_node/lab/queue/: producer.py
src/rf-surveillance_node/lab/server_client/: lab1.py
src/rf-surveillance_node/lab/thread/: lab2.py
src/rfcentral/: __init__.py  broker.py  common.py  main.py  model.py  receiver.py  rf_receiver.py
src/rfcentral/rest_api/: rest.py
src/rfcentral/rf_receiver/css/: receiver.py
src/rfnode/: __init__.py  broker.py  device_manager.py  devicemanager.py  example_google.py  main.py  scanner.py  transmitter.py
src/rfnode/common/: constants.py  log_manager.py  setting.py  util.py
src/rfnode/db/: database.py
src/rfnode/lab/: lab1.py
src/rfnode/lab/rf/: main.py  main3.py  rf_receiver.py
src/rfnode/lab/rtlsdr/: lab2.py
src/rfnode/lab/serialize/: lab4.py
src/rfnode/lab/serialize/date_to_str/: lab1.py
src/rfnode/lab/server_client/: server.py
src/rfnode/model/: model.py  rf_model.py
src/rfnode/rf_sender/css/: send.py  sender.py
src/rfnode/sender/: sender.py
src/rfnode/transmitter/: rt_execute.py
src/rfnode/transmitter/fragments/udp/: receiver.py  sender.py
src/rfnode/transmitter/hearbeat/rf/: receiver.py  sender.py
src/rfnode/transmitter/hearbeat/udp/: sender.py
src/rfserver/: main.py
src/rfsink/: __init__.py  main.py  readme.md
src/rfsink/database/: database_query.py
src/rfsink/signal_manager/: data_signal_manager.py
src/rfsink/widgets/: data_graph_layout.py  query_result_layout.py  search_layout.py
src/rfsink/windows/: main_window.py  query_result_window.py
src/rftsink/: __init__.py
tests/: test_broker.py  test_device_manager.py  test_scanner.py
tests/common/: test_log_manager.py  test_setting.py  test_util.py
tests/model/: test_rf_model.py
tests/rf_sender/css/: test_sender.py
